--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@
     outline: none;
     scroll-behavior: smooth;
     font-family: 'Poppins', sans-serif;
+    
+}
+
+html, body{
+    overflow-x: hidden;
 }
 
 /* on déclare les variables pour les réutiliser plus facilement */
